apps/resilio-sync/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: resilio-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resilio-sync
  serviceName: resilio-sync
  template:
    metadata:
      labels:
        app: resilio-sync
    spec:
      containers:
        - image: ghcr.io/linuxserver/resilio-sync:version-2.7.2.1375
          name: resilio-sync
          livenessProbe:
            exec:
              command:
                - pgrep
                - rslsync
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: array
              subPath: Sync
              mountPath: /sync
      volumes:
        - name: array
          persistentVolumeClaim:
            claimName: array
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
