apps/resilio-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync
spec:
  ports:
    - port: 55555
  selector:
    app: resilio-sync
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync-web
spec:
  ports:
    - port: 8888
  selector:
    app: resilio-sync
