apps/resilio-sync/sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync
spec:
  ports:
    - port: 55555
  selector:
    app: resilio-sync
  type: LoadBalancer
