apps/resilio-sync/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync-web
spec:
  ports:
    - port: 8888
  selector:
    app: resilio-sync
