apps/resilio-sync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resilio-sync
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sync.hubbe.club  
  rules:
    - host: sync.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resilio-sync-web
                port:
                  number: 8888
